Fixed phases on becoming scrollable. Set overflow to hidden for content and fixed some unresponsive containers

--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,7 @@
     height: 100vh;
     overflow: hidden;
 }
-.full-container{
-    height: calc(100vh - 75px);
-    width: 100vw;
-    overflow: hidden;
-    padding-bottom: 50px;
-}
+
 .primary-color{
     background-color: #1a1a1a;
 }
